--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,14 +1,15 @@
-group 'fr.g123k.flutterappbadge.flutterappbadger'
+group 'org.mtbo.flutterappbadge.flutterappbadger'
 version '1.0-SNAPSHOT'
 
 buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.2'
+        classpath 'com.android.tools.build:gradle:4.0.1'
     }
 }
 
@@ -22,18 +23,20 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
 
     defaultConfig {
         minSdkVersion 16
+        targetSdkVersion 30
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     lintOptions {
         disable 'InvalidPackage'
+        checkReleaseBuilds false
     }
 }
 
 dependencies {
     //noinspection GradleDependency
-    implementation "me.leolin:ShortcutBadger:1.1.22@aar"
+    implementation 'me.leolin:ShortcutBadger:1.1.22@aar'
 }
