--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_app_badger
 description: Plugin to update the app badge on the launcher (both for Android and iOS)
-version: 1.1.1
-homepage: https://github.com/g123k/flutter_app_badger
+version: 1.1.2
+homepage: https://github.com/PROGrand/flutter_app_badger
 
 dependencies:
   flutter:
@@ -11,11 +11,11 @@ flutter:
   plugin:
     platforms:
       android:
-        package: fr.g123k.flutterappbadger
+        package: org.mtbo.flutterappbadger
         pluginClass: FlutterAppBadgerPlugin
       ios:
         pluginClass: FlutterAppBadgerPlugin
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
-  flutter: ">=1.10.0 <2.0.0"
+  sdk: ">=2.9.0-14.1.beta <3.0.0"
+  flutter: ">=1.19.0-4.3.pre <2.0.0"
